Fixed Cover Sheet on Mobile

--- a/static/styles/news.sass
+++ b/static/styles/news.sass
@@ -11,7 +11,7 @@
     display: flex
     flex-flow: nowrap column
     #rwcl-spacer
-      width: 50%
+      width: 100%
       height: 50%
       display: flex
       #rwclogo
@@ -21,8 +21,7 @@
         background-size: cover
         margin: auto
     #sponsors
-      max-width: 35rem
-      width: 50%
+      width: 100%
       height: 50%
       display: flex
       flex-flow: wrap row
@@ -69,12 +68,15 @@ h1
     #logos
       flex-flow: nowrap row
       #rwcl-spacer
+        width: 50%
         height: 100%
         #rwclogo
             width: 30rem
             height: 15rem
             margin-top: 4rem
       #sponsors
+        max-width: 35rem
+        width: 50%
         height: 100%
         flex-flow: wrap column
         .slogo
